--- a/projects/templates/projects/base.html
+++ b/projects/templates/projects/base.html
@@ -22,112 +22,97 @@
 <body>
     {% block header %}
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid d-flex justify-content-between">
-            <!-- Logo and Title -->
-            <a class="navbar-brand navbar-title" href="{% url 'home' %}">
-                <img src="/static/projects/images/logo.png" alt="DevLink Logo" class="navbar-logo" color="#ffff">
-                DevLink |
-            </a>
-    
-            <!-- Navbar Toggler Button (for mobile)
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-             -->
+    {% if user.is_authenticated %}
+    <!-- Show full navbar when logged in -->
+    <nav class="custom-navbar">
+        <div class="custom-navbar-container">
+            <!-- Logo -->
+            <div class="custom-navbar-logo">
+                <a href="{% url 'home' %}">
+                    <img src="/static/projects/images/logo.png" alt="DevLink Logo">
+                </a>
+            </div>
 
-        <!-- Center the nav links and collapse for mobile -->
-        <div class="collapse navbar-collapse justify-content-between" id="navbarNavDropdown">
-            <ul class="navbar-nav nav-links align-items-">
-                {% if user.is_authenticated %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'home' %}">Projects</a>
-                </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'network' %}">Network</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'active_conversations' %}">Messaging</a>
-                    </li>
-                {% endif %}
-            </ul>
-        </div>
-    
-            <!-- Profile or Login/Signup Buttons -->
-            <ul class="navbar-nav d-flex align-items-center">
-                {% if user.is_authenticated %}
-                    <!-- Notification Dropdown -->
-                    <div class="navbar-icons-container">
-                        <!-- Notification Dropdown -->
-                        <div class="notification-dropdown">
-                            <a href="#" class="notification-link">
-                                <i class="fas fa-bell notification-icon"></i>
-                                {% if notifications %}
-                                    <span class="notification-count">{{ notifications.count }}</span>
-                                {% endif %}
-                            </a>
-                            <div class="dropdown-content">
-                                {% if notifications %}
-                                <ul class="notification-list">
-                                    {% for notification in notifications %}
-                                        <li id="notification-{{ notification.id }}">
-                                            <div class="notification-text">
-                                                {% if notification.related_message %}
-                                                    <a href="{% url 'active_conversations' %}?recipient={{ notification.related_message.sender.username }}">
-                                                        {{ notification.related_message.content }}
-                                                    </a>
-                                                {% endif %}
-                                                {% if notification.content %}
-                                                    <p>{{ notification.content }}</p>
-                                                {% endif %}
-                                            </div>
-                                            <div class="notification-timestamp">
-                                                {{ notification.timestamp|timesince }} ago
-                                            </div>
-                                            <div>                                            
-                                                <button data-id="{{ notification.id }}" class="delete-notification-btn">&times;</button>
-                                            </div>
-                                        </li>
-                                    {% endfor %}
-                                </ul>
-                                
-                                
-                                {% else %}
-                                    <p>No new notifications</p>
-                                {% endif %}
-                            </div>
-                            
-                            
-                        </div>
-    
-                        <!-- Profile Dropdown -->
-                        <div class="profile-dropdown">
-                            <a href="{% url 'profile' user.username %}">
-                                {% if user.userprofile.profile_picture %}
-                                    <img src="{{ user.userprofile.profile_picture|safe }}" class="profile-img" alt="{{ user.username }}">
-                                {% else %}
-                                    <img src="https://via.placeholder.com/150" class="profile-img" alt="{{ user.username }}">
-                                {% endif %}
-                            </a>
-                            <div class="dropdown-content">
-                                <a href="{% url 'edit_profile' %}" class="dropdown-button">Edit Profile</a>
-                                <form method="POST" action="{% url 'account_logout' %}">
-                                    {% csrf_token %}
-                                    <button type="submit" class="dropdown-button">Logout</button>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                {% else %}
-                <div class="button-container">
-                    <a href="{% url 'account_login' %}" class="btn">Login</a>
-                    <a href="{% url 'account_signup' %}" class="btn">Sign Up</a>
-                    
+            <!-- Navigation Links -->
+            <div class="custom-navbar-links">
+                <a href="{% url 'home' %}">
+                    <i class="fa fa-home"></i>
+                    <span>Home</span>
+                </a>
+                <a href="{% url 'network' %}">
+                    <i class="fa fa-users"></i>
+                    <span>My Network</span>
+                </a>
+                <a href="{% url 'active_conversations' %}">
+                    <i class="fa fa-comments"></i>
+                    <span>Messaging</span>
+                </a>
+                <a href="#">
+                    <i class="fa fa-bell"></i>
+                    <span>Notifications</span>
+                </a>
+            </div>
+
+            <!-- Profile Dropdown -->
+            <div class="unique-profile-dropdown">
+                <div class="unique-profile-trigger" id="uniqueProfileTrigger">
+                    <img src="{% if user.userprofile.profile_picture %}{{ user.userprofile.profile_picture|safe }}{% else %}https://via.placeholder.com/150{% endif %}" 
+                         alt="{{ user.username }}" class="unique-profile-image">
                 </div>
-                {% endif %}
-            </ul>
+                <div class="unique-profile-menu" id="uniqueProfileMenu">
+                    <!-- Dropdown content -->
+                    <div class="unique-profile-header">
+                        <img src="{% if user.userprofile.profile_picture %}{{ user.userprofile.profile_picture|safe }}{% else %}https://via.placeholder.com/150{% endif %}" 
+                             alt="{{ user.username }}" class="unique-profile-thumbnail">
+                        <div class="unique-profile-info">
+                            <h4>{{ user.first_name }} {{ user.last_name }}</h4>
+                            <p>AI Research @UNCC | 5X Hackathon Winner | Tech Enthusiast</p>
+                        </div>
+                        <a href="{% url 'profile' user.username %}" class="unique-profile-view-button">View Profile</a>
+                    </div>
+                    <hr>
+                    <div class="unique-profile-section">
+                        <p>Account</p>
+                        <ul>
+                            <li><a href="#">Premium Features</a></li>
+                            <li><a href="#">Settings & Privacy</a></li>
+                            <li><a href="#">Help</a></li>
+                            <li><a href="#">Language</a></li>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="unique-profile-footer">
+                        <form method="POST" action="{% url 'account_logout' %}">
+                            {% csrf_token %}
+                            <button type="submit" class="unique-profile-signout-button">Sign Out</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
     </nav>
+{% else %}
+    <!-- Show only Login/Signup if NOT logged in -->
+    <nav class="custom-navbar">
+        <div class="custom-navbar-container">
+            <!-- Logo -->
+            <div class="custom-navbar-logo">
+                <a href="{% url 'home' %}">
+                    <img src="/static/projects/images/logo.png" alt="DevLink Logo">
+                </a>
+            </div>
+
+            <!-- Just Login & Signup Links -->
+            <div class="custom-navbar-links">
+                <a href="{% url 'account_login' %}">Login</a>
+                <a href="{% url 'account_signup' %}">Sign Up</a>
+            </div>
+        </div>
+    </nav>
+{% endif %}
+
+    
+
     
     {% endblock %}
     <!-- Main Content -->
@@ -165,7 +150,27 @@
     </footer>
     
     {% endblock %}
+
     <script src="{% static 'projects/scripts.js' %}"></script>
+
+    <script>
+        function getCookie(name) {
+          let cookieValue = null;
+          if (document.cookie && document.cookie !== '') {
+            const cookies = document.cookie.split(';');
+            for (let i = 0; i < cookies.length; i++) {
+              const cookie = cookies[i].trim();
+              // Does this cookie string begin with the name we want?
+              if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                break;
+              }
+            }
+          }
+          return cookieValue;
+        }
+        </script>
+        
 
     <!-- Bootstrap JS and Dependencies -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
